# endeavour

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  sandbox.cpp  todo.md
docs/: roadmap.md  saving-and-loading.md
include/: helloworld.hpp
plans/: pathfinding.md  savingAndLoading.md
saves/: sample.xml
saves/DefaultPlayer/save_1/: player.xml
saves/DefaultPlayer/save_1/levels/: level1.xml
saves/DefaultPlayer/save_1/npcs/: Adam.xml  Adrian.xml  Anthony.xml
saves/Mark/save_1/: level1.xml  player.xml
saves/Mark/save_1/levels/: level1.xml
saves/Mark/save_1/npcs/: Adam.xml  Anthony.xml
src/: AI.cpp  AI.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  Level.cpp  Level.hpp  Line.cpp  Line.hpp  Player.cpp  Player.hpp  TextureManager.cpp  TextureManager.hpp  common.cpp  common.hpp  main.cpp  pathfinding.cpp  pathfinding.hpp  tests.cpp
test_res/TestPlayer/save_1/: player.xml
test_res/TestPlayer/save_1/levels/: level1.xml
test_res/TestPlayer/save_1/npcs/: Anthony.xml
test_res/saves/TestPlayer/save_1/: player.xml
test_res/saves/TestPlayer/save_1/levels/: level1.xml
